--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		    <meta charset="utf-8">
-		        <meta name="viewport" content="width=device-width, initial-scale=1">
-			    <title>Bootstrap demo</title>
-			        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-														             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	</head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap demo</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
 
-	<body>
-		    <h1>Prova final Lab Info 2022/2023</h1>
-		        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-				        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-					        crossorigin="anonymous"></script>
-	</body>
+<body>
+	<div class="container py-3">
+		<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+			<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+				<svg class="bi me-2" width="40" height="32"></svg>
+				<span class="fs-4">Prova</span>
+			</a>
+
+			<ul class="nav nav-pills">
+				<li class="nav-item"><a href="sobre.html" class="nav-link" aria-current="page">Sobre</a></li>
+			</ul>
+		</header>
+
+		<main>
+			<h1 style="text-align:center;">Prova final Lab Info 2022/2023</h1>
+			<br>
+			<p class="fs-5 text-muted" style="text-align:center;"">Esta página foi desenhada na prova final da disciplina de Laboratórios de
+				Informática</p>
+
+			<h2>Exemplo Tabela</h2>
+			<table class=" table table-striped">
+				<thead>
+					<tr>
+						<th scope="col">Data</th>
+						<th scope="col">Preço (com sparkline)</th>
+						<th scope="col">Preço (sem sparkline)</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>01/01/2022</td>
+						<td>120</td>
+						<td>90</td>
+					</tr>
+					<tr>
+						<td>02/01/2022</td>
+						<td>90</td>
+						<td>95</td>
+					</tr>
+					<tr>
+						<td>03/01/2022</td>
+						<td>120</td>
+						<td>105</td>
+					</tr>
+					<tr>
+						<td>04/01/2022</td>
+						<td>130</td>
+						<td>110</td>
+					</tr>
+					<tr>
+						<td>05/01/2022</td>
+						<td>125</td>
+						<td>115</td>
+					</tr>
+				</tbody>
+				</table>
+		</main>
+	</div>
+
+	<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+		</script>
+</body>
 
 </html>
